kubernetes/apps/flux-system/flux-webhook/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 400"]
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https
  hostnames:
    - flux-webhook.dcunha.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: notification-controller
          port: 80
